ppx/tests/failing/8.ml
let[@reaml.componnt "Foo"] _foo () = ()
